...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/edit_button"
                android:layout_width="@dimen/small_button_size"
                android:layout_height="@dimen/small_button_size"
                android:layout_marginEnd="@dimen/default_space"
                android:background="@null"
                android:contentDescription="@string/edit_recipe"
                android:padding="@dimen/small_button_padding_big_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_edit_24"
                android:tint="?attr/colorPrimaryVariant"
                app:tooltipTextCompat="@{@string/edit_recipe}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/delete_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="@dimen/small_button_size"
...
